--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   flutter_hooks: ^0.20.5
   # For cacehed image
   cached_network_image: ^3.3.1
+  # For network error
+  dio: ^5.4.3+1
 
 
 dev_dependencies:
